test/fail/actor-reference-even.mo
// actor references

let _ = actor "ic:C0FEFED00DE";  // not even number of digits
